Fix issue with test name overflow

--- a/src/styles/blocks/nugget.scss
+++ b/src/styles/blocks/nugget.scss
@@ -76,8 +76,9 @@
         .header-inner {
             display: flex;
             padding: 5px;
-            padding-right: 25px;
+            padding-right: var(--status-block-width);
             background-color: var(--primary-background-color);
+            height: 28px;
         }
 
         .toggle {
